--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,14 @@
 {
   "name": "ember-app-kit",
   "dependencies": {
-    "ember": "http://builds.emberjs.com/stable/ember.js",
-    "ember-prod": "http://builds.emberjs.com/stable/ember.prod.js",
     "handlebars": "1.0.0",
     "jquery": "~1.9.1",
     "qunit": "~1.12.0",
+    "ember": "1.1.0-beta.2",
+    "ember-data-shim": "1.0.0-beta.3",
     "hexaflip": "~0.1.1"
+  },
+    "resolutions": {
+    "ember": "1.1.0-beta.2"
   }
 }
