Installed momentjs and highlightjs, removed prismjs

--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "ember": "1.1.0-beta.2",
     "ember-data-shim": "1.0.0-beta.3",
     "hexaflip": "~0.1.1",
-    "prismjs": "*"
+    "momentjs": "~2.2.1",
+    "highlightjs": "~7.3.0"
   },
   "resolutions": {
     "ember": "1.1.0-beta.2"
