Fixed html render problem, components safehtml renders correctly now, problem was the extra p tag around the safehtml string.

--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "ember-data-shim": "1.0.0-beta.3",
     "hexaflip": "~0.1.1",
     "momentjs": "~2.2.1",
-    "highlightjs": "~7.3.0"
+    "highlightjs": "~7.3.0",
+    "markdown": "~0.5.0"
   },
   "resolutions": {
     "ember": "1.1.0-beta.2"
